Created a new template for app component and join the playlist with the app component

--- a/app/ts/templates/playlist.component.html
+++ b/app/ts/templates/playlist.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <h2 align="center">
-            {{ mainheading }}
+           Playlist will load here
         </h2>
     </div>
 </div>
