created the object of class videos and added 2 videos

--- a/app/ts/templates/app.component.html
+++ b/app/ts/templates/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <h2>{{ mainheading }}</h2>
+        <h2> <b> {{ mainheading }} </b></h2>
     </div>
 
-    <playlist></playlist>
+    <playlist Videos="Videos"></playlist>
 </div>
