Added a Click event and Displays the Playlist table on the page

--- a/app/ts/templates/app.component.html
+++ b/app/ts/templates/app.component.html
@@ -3,5 +3,5 @@
         <h2> <b> {{ mainheading }} </b></h2>
     </div>
 
-    <playlist Videos="Videos"></playlist>
+    <playlist [videos]="videos"></playlist>
 </div>
