--- a/app/ts/templates/playlist.component.html
+++ b/app/ts/templates/playlist.component.html
@@ -1,7 +1,16 @@
-<div class="container">
-    <div class="row">
-        <h2 align="center">
-           Playlist will load here
-        </h2>
-    </div>
-</div>
+<table class="table table-hover">
+    <thead>
+    <tr>
+        <td>ID</td>
+        <td>Title</td>
+        <td>Description</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="#v of videos" (click)="onSelect(v)">
+        <td>{{ v.id }}</td>
+        <td>{{ v.title }}</td>
+        <td> {{ v.desc }} </td>
+    </tr>
+    </tbody>
+</table>
